[package]
name = "kug-cli"
description = "KUG Protocol"
documentation = "https://docs.rs/kug-cli"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "4.0", features = ["derive"] }
kug-core = { path = "../kug-core" }
