[package]
name = "kug-core"
description = "KUG Protocol"
documentation = "https://docs.rs/kug-core"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
