[package]
name = "kug-keygen"
description = "KUG Protocol"
documentation = "https://docs.rs/kug-keygen"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
