[package]
name = "kug-version"
description = "KUG Protocol Version"
documentation = "https://docs.rs/kug-version"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
